--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
+<script src="service-worker.js"></script>
 </body>
 </html>
