--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <script src="script.js"></script>
 <script>
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/service-worker.js')
+        navigator.serviceWorker.register('service-worker.js')
             .then((registration) => {
                 console.log('Service Worker registrado con éxito:', registration);
             })
@@ -57,6 +57,5 @@
             });
     }
 </script>
-<script src="service-worker.js"></script>
 </body>
 </html>
